--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [RJNameConfig]
-DLsiteUrlBase="http://www.dlsite.com/maniax/work/=/product_id/"
+DLsiteUrlBase="http://www.dlsite.com/maniax/work/=/product_id/{RJNumber}"
 FormatNameTemplate=[{maker_name}][{saleDate}][{RJNumber}]{work_name}{rjtype}
 RJNumber_URL_Selector=#work_name a
 maker_name_Selector=.maker_name
@@ -9,4 +9,4 @@ img_body_Selector=.product-slider-data div
 img_attribute=data-src
 
 [config]
-CurrentDirectory=C:/Users/mowei/Desktop/test
+CurrentDirectory=
