清除設定檔路徑

--- a/Release/config.ini
+++ b/Release/config.ini
@@ -9,4 +9,4 @@ img_body_Selector=.product-slider-data div
 img_attribute=data-src
 
 [config]
-CurrentDirectory=C:/Users/mowei/Desktop/RJ\x6574\x7406/ERR
+CurrentDirectory=
